Added necessary alignment css from underscores styles

--- a/scss/_underscores.scss
+++ b/scss/_underscores.scss
@@ -143,3 +143,21 @@
 .site-main .gallery-columns-4 .gallery-item img{
 
 }
+
+.alignleft {
+    display: inline;
+    float: left;
+    margin-right: 1.5em;
+}
+
+.alignright {
+    display: inline;
+    float: right;
+    margin-left: 1.5em;
+}
+
+.aligncenter {
+    clear: both;
+    display: block;
+    margin: 0 auto;
+}
